[tool.poetry]
name = "hk1980"
version = "0.2.2"
description = "A forked project from hk80. This project also convert the coordinates between Hong Kong 1980 Grid System and World Geodetic System 1984 with pyproj, with a more update version of pyproj and providing better performance."
authors = ["Kavan Chan <kavandevelopment@gmail.com>"]
keywords = ["hk80", "hk1980", "wgs1984", "wgs84", "grid", "coordinate", "hk"]
readme = "README.md"
homepage = "https://github.com/kavandev/hk1980"
repository = "https://github.com/kavandev/hk1980"
license = "MIT"
include = ["LICENSE",]
packages = [{include = "hk1980"}]

[tool.poetry.dependencies]
python = "^3.10"
pyproj = "^3.7.1"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.3"
ruff = "^0.12.11"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
